--- a/404.html
+++ b/404.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
- <html>
+<html>
   <head>
-  <title>kettraWorld - 404</title>
-    <meta property="og:site_name" content="kettraWorld">
-    <meta property="og:keywords" content="kettraworld, discord, Kettra World Discord, servidor, Kettra entra no discord">
-    <meta property="og:title" content="KettraWorld">
-    <link rel="icon" href="src/imagens/logo.png"> 
-    <meta property="og:description" content="venha conhecer kettra world de perto, entre no nosso discord!">
-  <meta http-equiv="refresh" content="0; url=https://kettra.herokuapp.com/" />
-  <script type="text/javascript">
-    window.location.href = "https://kettra.herokuapp.com/"
-  </script>
-</head>
-<body>
-  <p><a href="">https://kettra.herokuapp.com/</a></p>
-</body>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+   <title>Kettra World - Error</title>
+  </head>
+  <body>
+    <p> { status: "500" } </p>
+  </body>
 </html>
