--- a/instagram.html
+++ b/instagram.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Kettra World - instagram</title>
-    <meta property="og:site_name" content="kettraWorld">
-    <meta property="og:keywords" content="instagram">
-    <meta property="og:title" content="KettraWorld">
-    <link rel="icon" href="src/imagens/logo.png"> 
-  <meta http-equiv="refresh" content="0; url=https://www.instagram.com/kettraworld/" />
-  <script type="text/javascript">
-    window.location.href = "https://www.instagram.com/kettraworld/"
-  </script>
-</head>
-<body>
-  <p><a href="https://www.instagram.com/kettraworld/">https://www.instagram.com/kettraworld/</a></p>
-</body>
+ <html>
+  <head>
+   <title>Kettra World - Instagram</title>
+  <meta http-equiv="refresh" content="0; url=https://www.instagram.com/kettraworld" />
+ </head>
+  <body>
+ </body>
 </html>
