--- a/discord.html
+++ b/discord.html
@@ -1,19 +1,9 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Discord De kettraWorld</title>
-    <meta property="og:site_name" content="kettraWorld">
-    <meta property="og:keywords" content="kettraworld, discord, Kettra World Discord, Kettra entra no discord">
-    <meta property="og:title" content="KettraWorld">
-    <link rel="icon" href="src/imagens/logo.png"> 
-    <meta property="og:description" content="venha conhecer kettra world de perto, entre no nosso discord!">
+ <html>
+  <head>
+   <title>Kettra World - Discord</title>
   <meta http-equiv="refresh" content="0; url=https://discord.gg/NDzFeDp8YE" />
-  <script type="text/javascript">
-    window.location.href = "https://discord.gg/NDzFeDp8YE"
-  </script>
 </head>
 <body>
-  <p><a href="https://discord.gg/NDzFeDp8YE">https://discord.gg/NDzFeDp8YE</a></p>
-  <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "246b7793a5db407c82a50cb612dd82e4"}'></script>
 </body>
 </html>
