--- a/404.html
+++ b/404.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+ <html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>Kettra World - Error</title>
-  </head>
-  <body>
-    <p> { status: "500" } </p>
-  </body>
+   <title>Kettra World</title>
+  <meta http-equiv="refresh" content="0; url=https://kettra.herokuapp.com" />
+     <meta name="description" content="✧ Kettra World best rpg server in Brazil ✧"/>
+</head>
+<body>
+</body>
 </html>
