--- a/404.html
+++ b/404.html
@@ -2,9 +2,6 @@
  <html>
   <head>
    <title>Kettra World</title>
-  <meta http-equiv="refresh" content="0; url=https://kettra.herokuapp.com" />
-     <meta name="description" content="✧ Kettra World best rpg server in Brazil ✧"/>
-</head>
-<body>
-</body>
+  <meta http-equiv="refresh" content="0; url=https://www.kettraworld.shop" />
+ </head>
 </html>
