--- a/404.html
+++ b/404.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
  <html>
   <head>
-   <title>Kettra World</title>
-  <meta http-equiv="refresh" content="0; url=https://www.kettraworld.shop" />
+  <title>Kettra World - Está perdido?</title>
+  <!--- start to load the style --->
+  <link rel="stylesheet" href="src/css/global.css">
+  <link rel="stylesheet" href="src/css/particles.css">
+   <!--- end to load the style --->
  </head>
+ <body class="challenge">
+   <!--- start particles --->
+  	<div class="particle particle-1"></div>
+		<div class="particle particle-2"></div>
+		<div class="particle particle-3"></div>
+		<div class="particle particle-4"></div>
+  <!--- end particles --->
+ </body>
 </html>
