--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <article>
       <h2 class="article-title"><i class="fas fa-book"></i> Kettra World</h2>
       <div class="card-rpg">
-        <img src="assets/img/makadia.webp" class="card-img-rpg card-img-top" alt="Makadia" />
+        <img src="assets/img/makadia.webp" class="card-img-rpg card-img-top" alt="Makadia" width="auto" height="auto" />
         <div>
           <div class="page">
             <p class="card-text-rpg">
