--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=7,8,edge" />
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>Kettra World - Sua aventura começou</title>
   <meta name="theme-color" content="#B05068" />
