--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=7,8,edge" />
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Kettra World - Sua aventura começou</title>
+  <title>Kettra World - Heavenly</title>
   <meta name="theme-color" content="#B05068" />
   <link rel="stylesheet" href="assets/css/global.css" />
   <link rel="stylesheet" href="assets/css/particles.css" />
