--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=7,8,edge" />
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>Kettra World - Heavenly</title>
+  <meta name="description" content="O mundo de Kettra World esconde grandes segredos e se você é um jogador aventureiro pode descubri-los!">
   <meta name="theme-color" content="#B05068" />
   <link rel="stylesheet" href="assets/css/global.css" />
   <link rel="stylesheet" href="assets/css/particles.css" />
