--- a/loja.html
+++ b/loja.html
@@ -4,7 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Kettra World - loja dos plebeus</title>
+  <title>Kettra World - Loja dos plebeus</title>
   <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="assets/img/favicon.ico" />
   <meta name="theme-color" content="#B05068" />
@@ -47,9 +47,6 @@
           <a class="nav-link" href="https://discord.gg/NDzFeDp8YE" target="_blank"><i class="fab fa-discord"></i>
             Discord</a>
         </li>
-    <!---    <li id="login" class="nav-item">
-          <a class="nav-link" href="/dashboard/auth2.html"><i class="fas fa-sign-in-alt"></i> Login</a>
-        </li> --->
       </ul>
     </div>
   </nav>
