--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer">
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6690516270288705" crossorigin="anonymous"></script>
  <script src="assets/js/book.js"></script>
  <script src="assets/js/status.js"></script>
 </head>
