--- a/client/index.html
+++ b/client/index.html
@@ -14,9 +14,6 @@
   
   
   <link rel="stylesheet" href="src/styles/main.css" type="text/css" media="all" />
-  <link rel="stylesheet" href="src/styles/navbar.css" type="text/css" media="all" />
-  <link rel="stylesheet" href="src/styles/header.css" type="text/css" media="all" />
-  <link rel="stylesheet" href="src/css/particles.css" type="text/css" media="all" />
   
   <script src="src/js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="https://cdn.jsdelivr.net/jquery.span/1.3.1/jquery.span.min.js"></script>
@@ -27,14 +24,13 @@
  <!--
    <div id="loading">
     <div class="spinner"></div>
-  </div
+  </div> --->
 
-  <newes class="newes">
+  <news class="news">
    <span>
       <i class="fas fa-newspaper"></i> Você esta preste a embarca na melhor <b>temporada</b> do servidor
    </span>
-  </newes>
-  --->
+  </news>
 
   <header class="header-body">
     <h1>Kettra World</h1>
@@ -52,6 +48,7 @@
     </div>
    </div>
   </nav>
+
 
 
   </body>
