--- a/client/index.html
+++ b/client/index.html
@@ -42,15 +42,25 @@
    <label for="menu-right" class="menu-bt right"></label>
    <div class="nav-menu right">
     <div class="menu-scroll">
-     <h5>servidor</h5>
-     <a href="" class="mdi mdi-account-circle">Perfis</a>
-      <a href="" class="mdi mdi-account active">Usuários</a>
+     <h5>Redes sociais</h5>
+     <a href="https://discord.gg/NDzFeDp8YE" class="mdi mdi-discord" target="_blank"> Discord</a>
+     <a href="https://www.instagram.com/kettraworld" class="mdi mdi-instagram" target="_blank"> Instagram</a>
+     <a href="https://github.com/kettraworld" class="mdi mdi-git"
+     target="_blank"> Github</a>
     </div>
    </div>
   </nav>
-
-
-
+  
+  <main>
+   <section class="section">
+    <article>
+     <h2 class="title">
+       <span class=""></span> História
+     </h2>
+    </article>
+   </section>
+  </main>
+  
   </body>
  <script defer src="src/js/main.js"></script>
 </html>
