--- a/client/index.html
+++ b/client/index.html
@@ -61,6 +61,10 @@
    </section>
   </main>
   
+  <footer class="footer">
+    <a href="https://github.com/kettraworld" target="_blank"><i class="fab fa-fort-awesome"></i> Developed by the kettra team</a>
+  </footer>
+  
   </body>
  <script defer src="src/js/main.js"></script>
 </html>
