--- a/client/index.html
+++ b/client/index.html
@@ -53,11 +53,84 @@
   
   <main>
    <section class="section">
-    <article>
      <h2 class="title">
        <span class=""></span> História
      </h2>
-    </article>
+   </section>
+   <section class="section">
+     <h2 class="title">
+       <span class=""></span> História
+     </h2>
+   </section>
+   <section class="section">
+     <h2 class="title">
+       <span class=""></span> História
+     </h2>
+   </section>
+   <section class="section">
+     <h2 class="title">
+       <span class=""></span> História
+     </h2>
+   </section>
+   <section class="section">
+     <h2 class="title">
+       <span class=""></span> História
+     </h2>
+   </section>
+   <section class="section">
+     <h2 class="title">
+       <span class=""></span> História
+     </h2>
+   </section>
+   <section class="section">
+     <h2 class="title">
+       <span class=""></span> História
+     </h2>
+   </section>
+   <section class="section">
+     <h2 class="title">
+       <span class=""></span> História
+     </h2>
+   </section>
+   <section class="section">
+     <h2 class="title">
+       <span class=""></span> História
+     </h2>
+   </section>
+   <section class="section">
+     <h2 class="title">
+       <span class=""></span> História
+     </h2>
+   </section>
+   <section class="section">
+     <h2 class="title">
+       <span class=""></span> História
+     </h2>
+   </section>
+   <section class="section">
+     <h2 class="title">
+       <span class=""></span> História
+     </h2>
+   </section>
+   <section class="section">
+     <h2 class="title">
+       <span class=""></span> História
+     </h2>
+   </section>
+   <section class="section">
+     <h2 class="title">
+       <span class=""></span> História
+     </h2>
+   </section>
+   <section class="section">
+     <h2 class="title">
+       <span class=""></span> História
+     </h2>
+   </section>
+   <section class="section">
+     <h2 class="title">
+       <span class=""></span> História
+     </h2>
    </section>
   </main>
   
