--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,9 @@
 
   <header class="header-body">
     <h1>Kettra World</h1>
-    <span>O melhor e mais moderno bot de Discord feito para servidores de Minecraft profssionais que crecem cada vez mais, jogue agora e divirta-se</span>
+    <span>Lar da grande Deusa Amarantha e seus irmãos, que deram tudo de si para
+    selar o imensurável poder da Deusa primogênita Tainith, que iria destruir o
+    mundo conhecido na era como Koramund</span>
   </header>
   
   <nav>
