--- a/callback.html
+++ b/callback.html
@@ -7,7 +7,8 @@
    <script src="src/js/js.cookie.min.js" type="text/javascript"></script>
    <script src="src/js/client/discord.js" type="text/javascript"></script>
  <script defer type="text/javascript">
- (async () => {
+
+(async () => {
 
 const query = new URLSearchParams(window.location.search).get('code');
 
@@ -32,7 +33,7 @@ Cookies.set('refresh_token_user', token.refresh_token, {
 }); 
   
 
-window.location.href = "/pages/user/dashboard.html";
+window.location.href = "/";
   
 })();
  </script>
