--- a/callback.html
+++ b/callback.html
@@ -33,7 +33,7 @@ Cookies.set('refresh_token_user', token.refresh_token, {
 }); 
   
 
-window.location.href = "/";
+window.location.href = "/?discord=true";
   
 })();
  </script>
