--- a/index.html
+++ b/index.html
@@ -178,15 +178,16 @@
   <span class="play-copy-alert" id="play-copy-alert" href="#">IP copiado!</span>
    </div>
   </section>
- <!---end of the car responsible for the server address ---> 
-  
+ <!---end of the car responsible for the server address --->  
   
   </main>
   
   <footer class="footer">
-    <a href="https://github.com/kettraworld" target="_blank"><i class="fab fa-fort-awesome"></i> Developed by the kettra team</a>
-  </foote
+    <a href="https://github.com/kettraworld" target="_blank">
+      <i class="fab fa-fort-awesome"></i> Developed by the kettra team
+    </a>
+  </footer>
+   
   </body>
-  
  <script defer src="src/js/main.js"></script>
 </html>
