--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   
   <meta name="theme-color" content="#B85870">
   <meta property="og:title" content="Kettra World">
-  
+ 
   <link rel="shortcut icon" href="src/img/favicon.ico" type="image/x-icon" />
  
   <link rel="stylesheet" href="src/styles/main.css" type="text/css" media="all" />
   
- <script src="src/js/js.cookie.min.js" type="text/javascript"></script>
+  <script src="src/js/js.cookie.min.js" type="text/javascript"></script>
  
- <script src="src/js/jquery.min.js" type="text/javascript"></script>
+  <script src="src/js/jquery.min.js" type="text/javascript"></script>
   
 </head>
   
@@ -40,18 +40,17 @@
    <div class="menu-scroll">
      <h5>Navegação</h5>
      <a href="/" class="mdi mdi-home"> Home</a>
-     <a href="https://wiki-kettraword.vercel.app" class="mdi mdi-wikipedia" target="_blank"> Wiki</a>
      <h5>Redes sociais</h5>
-     <a href="https://discord.gg/NDzFeDp8YE" class="mdi mdi-discord" target="_blank"> Discord</a>
+     <a href="https://discord.gg/d3YgZTfZq5" class="mdi mdi-discord" target="_blank"> Discord</a>
      <a href="https://www.instagram.com/kettraworld" class="mdi mdi-instagram" target="_blank"> Instagram</a>
      <a href="https://github.com/kettraworld" class="mdi mdi-git"
      target="_blank"> Github</a>
       <h5>Jogador</h5>
-   <a id="login" href="https://discord.com/api/oauth2/authorize?client_id=993546761991884911&response_type=code&redirect_uri=http%3A%2F%2Flocalhost%3A8158%2Fcallback.html&scope=identify+email+connections+guilds+guilds.join+guilds.members.read" class="mdi mdi-login"> Entrar</a>
+   <a id="login" href="#" class="mdi mdi-login"> Entrar</a>
     </div>
   </div>
  </nav>
- 
+
   <div class="banner banner-text">
     <h1>IMAGINE UM LUGAR ONDE...</h1>
     <span>"...Onde você pode escrever o seu próprio destino sem medo do final da história por que a sinopse é apenas um detalhe"</span>
@@ -60,110 +59,10 @@
   <main>
    <section class="section">
      <h2 class="title">
-       <span class=""></span> História
+       <span class=""></span> Loja
      </h2>
    </section>
-  
-  <!---start of the car responsible for the server address ---> 
-  <style type="text/css">
-
-.play {
-	display: flex;
-	text-align: center;
-	flex-direction: column;
-	justify-content: center;
-	color: var(--text-color);
-	background-color: var(--section-color);
-}
-
-.play .content {
-	padding: 20px 4px;
-	border-radius: 10px;
-	background-color: #3b96be;
-	border: 3px solid white;
-	justify-content: space-between;
-}
-
-.play .content h1 {
-	margin: 0;
-	font-size: 40px;
-	font-family: 'Panton';
-	text-transform: uppercase;
-	text-shadow: 0px 4.5px 0px #00000040;
-}
-
-.play .content p {
-	margin: 5px !important;
-}
-
-.play-copy-alert {
-	right: 20px;
-	bottom: 60px;
-	padding: 10px;
-	border-radius: 20px;
-	display: none;
-	position: fixed;
-	text-transform: uppercase;
-	border: 1.8px solid #fff;
-	font-family: 'Panton', sans-serif;
-	background: linear-gradient(to bottom, var(--layout), var(--layout-dark));
-	text-shadow: 0px 1.5px 0px rgb(0 0 0 / 25%);
-}
-
-.play-copy-alert.show {
-	opacity: 1;
-	display: block;
-}    
-
-.play-images img {
-	width: 180px;
-	height: 140px;
-}
-
-@media screen and (min-width: 320px) and (max-width: 999px) {
-
-	.play img {
-
-		display: none;
-	}
-
-	.play {
-		padding: 20px 20px 30px 25px;
-	}
-
-	.play .content {
-		padding: 20px 15px;
-	}
-
-	@media screen and (min-width: 375px) {
-		.play .content {
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
-		}
-
-		.play img {
-			display: block;
-		}
-
-		.play-img-2 {
-			display: none;
-		}
-	}
-
-	@media screen and (min-width: 767px) {
-		.play {
-			padding: 50px;
-		}
-
-		.play .content {
-			padding: 30px;
-		}
-	}
-}
-  </style>
-  <section class="section play">
+   <section class="section play">
     <div class="content flex">
    <div class="play-images play-img-1">
 <img src="src/img/background/steve-default.webp" alt="Image of a steve and alex">
@@ -177,9 +76,7 @@
    <img src="src/img/background/steve-swords.webp" /></div>
   <span class="play-copy-alert" id="play-copy-alert" href="#">IP copiado!</span>
    </div>
-  </section>
- <!---end of the car responsible for the server address --->  
-  
+  </section> 
   </main>
   
   <footer class="footer">
@@ -189,5 +86,6 @@
   </footer>
    
   </body>
+  
  <script defer src="src/js/main.js"></script>
 </html>
