--- a/index.html
+++ b/index.html
@@ -58,9 +58,49 @@
   
   <main>
    <section class="section">
-     <h2 class="title">
-       <span class=""></span> Loja
-     </h2>
+    <h2 class="title">
+        <span class=""></span> <i class="fas fa-shop"></i> Loja
+      </h2>
+    <shop class="card">
+      <div class="icon">
+      <img src="src/img/favicon.ico" />
+      </div>
+      <h3>Bau magico</h3>
+      <span>Um bau magico contem a magia magica onde o jogador vira mago!</span>
+      <a href="#">
+       <button class="shop">R$ 19,99</button>
+      </a>
+      </shop>
+    <shop class="card">
+       <div class="icon">
+       <img src="src/img/favicon.ico" />
+       </div>
+       <h3>Bau magico</h3>
+       <span>Um bau magico contem a magia magica onde o jogador vira mago!</span>
+       <a href="#">
+        <button class="shop">R$ 19,99</button>
+       </a>
+       </shop>
+    <shop class="card">
+       <div class="icon">
+       <img src="src/img/favicon.ico" />
+       </div>
+       <h3>Bau magico</h3>
+       <span>Um bau magico contem a magia magica onde o jogador vira mago!</span>
+       <a href="#">
+        <button class="shop">R$ 19,99</button>
+       </a>
+       </shop>
+    <shop class="card">
+        <div class="icon">
+        <img src="src/img/favicon.ico" />
+        </div>
+        <h3>Bau magico</h3>
+        <span>Um bau magico contem a magia magica onde o jogador vira mago!</span>
+        <a href="#">
+         <button class="shop">R$ 19,99</button>
+        </a>
+        </shop>
    </section>
    <section class="section play">
     <div class="content flex">
