--- a/index.html
+++ b/index.html
@@ -121,7 +121,10 @@
     </a>
   </footer>
    
-  </body>
+ </body>
+ 
+ <!--- script used on the website to provide the necessary resources  --->
  <script defer src="src/js/client/cookie.js" type="text/javascript"></script>
  <script defer src="src/js/main.js" type="text/javascript"></script>
+ 
 </html>
