--- a/payment.html
+++ b/payment.html
@@ -131,7 +131,7 @@
  <label class="label">
   <i class="fas fa-credit-card"></i> Forma de pagamento
   </label>
-  <select type="select" class="form-control" id="plataform">
+  <select type="select" class="form-control" id="platform">
 	<option value="paypal" disabled>paypal</option>
   <option value="pix">pix</option>
   <option value="stripe" disabled>stripe</option>
