--- a/website/404.html
+++ b/website/404.html
@@ -6,12 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=7,8,edge" />
   <title>Kettra World</title>
   <link rel="stylesheet" href="src/styles/ui.css" type="text/css" media="all" />
-  <script src="src/modules/jquery.min.js"></script>
 </head>
  <body>
-   <audio id="teleport" autoplay>
-    <source src="src/music/teleport.mp3" type="audio/mp3">
-   </audio>
   <loader>
     <div class="wrapper">
      <div class="loader">
@@ -23,6 +19,10 @@
     </div>
 </loader>
  </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <audio id="teleport" preload="auto">
+    <source src="src/music/teleport.mp3" type="audio/mp3">
+   </audio>
  <script type="text/javascript" charset="utf-8">
  $(document).on('click', () => {
    $('#teleport')[0].play();
